--- a/main/apps/web-app/package.json
+++ b/main/apps/web-app/package.json
@@ -22,6 +22,7 @@
         "clsx": "^2.1.1",
         "daisyui": "^2.51.6",
         "ethers": "6.11.1",
+        "face-api.js": "^0.22.2",
         "jotai": "^2.9.0",
         "next": "14.1.0",
         "next-pwa": "^5.6.0",
