--- a/main/apps/web-app/package.json
+++ b/main/apps/web-app/package.json
@@ -30,6 +30,7 @@
         "react-dom": "^18",
         "react-icons": "^5.3.0",
         "react-toastify": "^8.0.3",
+        "sonner": "^2.0.3",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
         "uuid": "^10.0.0",
