feat: fetching model trained data from server

--- a/main/apps/web-app/server/.env
+++ b/main/apps/web-app/server/.env
@@ -17,7 +17,7 @@ DATABASE_USERNAME=
 DATABASE_PASSWORD=
 
 # AI Service Configuration
-AI_REPUTATION_SERVICE_URL=
+AI_SERVICE_URL=http://localhost:8090
 AI_REPUTATION_API_KEY=
 
 # Wallet Tracking
