--- a/main/apps/web-app/tsconfig.json
+++ b/main/apps/web-app/tsconfig.json
@@ -21,6 +21,6 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "ai/training/DatasetManager.js"],
     "exclude": ["node_modules"]
 }
