feat: update goverance flow

--- a/main/apps/web-app/.env
+++ b/main/apps/web-app/.env
@@ -10,3 +10,6 @@ ETHEREUM_PRIVATE_KEY="2fa306556c85f851490b0dbb3b781feb70f863d3c28fc247b3dd58a70e
 INFURA_API_KEY="https://eth-sepolia.g.alchemy.com/v2/Kd1XQbFAa3ZboKORKFNQ9mmtcrM5PbZv"
 NEXT_PUBLIC_WLD_APP_ID="app_2510830dfa5821aaceb52aa6e7d0855b"
 NEXT_PUBLIC_WLD_ACTION="unique_human"
+
+
+NEXT_PUBLIC_ETHEREUM_MAINNET_ALCHEMY_API_KEY="https://eth-mainnet.g.alchemy.com/v2/Kd1XQbFAa3ZboKORKFNQ9mmtcrM5PbZv"
