--- a/main/apps/web-app/tsconfig.json
+++ b/main/apps/web-app/tsconfig.json
@@ -19,7 +19,8 @@
         ],
         "paths": {
             "@/*": ["./src/*"]
-        }
+        },
+        "target": "ES2020"
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "ai/training/DatasetManager.js"],
     "exclude": ["node_modules"]
