--- a/main/apps/web-app/tsconfig.json
+++ b/main/apps/web-app/tsconfig.json
@@ -20,7 +20,12 @@
         "paths": {
             "@/*": ["./src/*"]
         },
-        "target": "ES2020"
+        "target": "ES2020",
+        "typeRoots": [
+            "./node_modules/@types",
+            "./src/types"
+        ],
+        "ignoreDeprecations": "5.0"
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "ai/training/DatasetManager.js"],
     "exclude": ["node_modules"]
