--- a/main/apps/web-app/package.json
+++ b/main/apps/web-app/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "postinstall": "patch-package"
     },
     "dependencies": {
         "@anon-aadhaar/react": "^2.4.3",
@@ -49,8 +50,10 @@
         "dotenv": "^16.4.5",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
+        "patch-package": "^8.0.0",
         "pino-pretty": "^11.2.2",
         "postcss": "^8.4.47",
+        "postinstall-postinstall": "^2.1.0",
         "tailwindcss": "^3.4.13",
         "typescript": "^5"
     },
