--- a/main/apps/web-app/package.json
+++ b/main/apps/web-app/package.json
@@ -18,6 +18,7 @@
         "@tanstack/react-query": "^5.50.1",
         "@worldcoin/idkit": "^1.3.0",
         "alchemy-sdk": "^2.6.2",
+        "buffer": "^6.0.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "daisyui": "^2.51.6",
@@ -26,6 +27,7 @@
         "jotai": "^2.9.0",
         "next": "14.1.0",
         "next-pwa": "^5.6.0",
+        "process": "^0.11.10",
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^5.3.0",
@@ -33,6 +35,7 @@
         "sonner": "^2.0.3",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
+        "util": "^0.12.5",
         "uuid": "^10.0.0",
         "viem": "2.x",
         "wagmi": "^2.10.9"
@@ -50,5 +53,10 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "typescript": "^5"
+    },
+    "browser": {
+        "fs": false,
+        "net": false,
+        "tls": false
     }
 }
