--- a/main/apps/ai/package.json
+++ b/main/apps/ai/package.json
@@ -29,6 +29,6 @@
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
-        "@types/express": "4.17.17"
+        "@types/express": "^5.0.1"
     }
 }
